2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘Iptr_type’ with ‘char *’.

	* b-fro.h (Iptr_type): Delete typedef.
	(struct fro): Change type to ‘char *’ for members ‘ptr’, ‘lim’, ‘base’.
	* b-fro.c (fro_open): Use ‘char *’ directly.
	* rcsedit.c (struct editstuff): Likewise.
	(movelines, insertline, snapshotline, snapshotedit_fast)
	(finisheditline, finishedit_fast, enterstring): Likewise.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Message’ with ‘struct link’ + ‘struct u_log’.

	* rcs.c (struct u_log): New.
	(struct Message): Delete.
	(messagelst): Change type to ‘struct link’.
	(nextmessage): Delete var.
	(getmessage): Take ‘struct link **’; use ‘extend’.
	(domessages): Update to walk ‘struct link’ list.
	(main): Update call to ‘getmessage’; update ‘messagelst’ access.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Revpairs’ with ‘struct link’ + ‘struct revrange’.

	* rlog.c (struct revrange): New.
	(struct Revpairs): Delete.
	(revlist, Revlst): Change type to ‘struct link *’.
	(extractdelta): Update to walk ‘struct link’ list.
	(PUSH): New macro.
	(getnumericrev): Update to walk ‘struct link’ list; use ‘PUSH’.
	(putrevpairs): Use ‘PUSH’.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: prepend

	* b-esds.h (prepend): New func decl.
	* b-esds.c (prepend): New func.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct u_symdef’ more.

	* rcs.c (struct u_symdef): Move from here...
	* base.h (struct u_symdef): ...to here.
	* ci.c: #include "b-esds.h".
	(struct Symrev): Delete.
	(assoclst): Change type to ‘struct link’.
	(nextassoc): Delete var.
	(addsyms): Update to walk ‘struct link’ list.
	(addassoclst): Delete func.
	(first_meaningful_symbolic_name): New static func.
	(main): Combine ‘-n’, ‘-N’ handling; update ‘assoclst’
	init and access; use ‘first_meaningful_symbolic_name’.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
